# supaproxy-mcp-server

./: .env.example  .gitignore  README.md  SupaProxyMCP.spec  pyproject.toml  requirements.txt  run_mcp.py
docs/: deep-links-navigation.md  mcp-ai-chat-integration.md
src/supaproxy_mcp/: __init__.py  chat.py  client.py  config.py  docs.py  header_context.py  server.py
src/supaproxy_mcp/tools/: __init__.py  auth.py  crud.py  functions.py  knowledge.py  navigation.py  query.py  schema.py  secrets.py  storage.py
