[project]
name = "supaproxy-mcp-server"
version = "0.1.0"
description = "MCP Server for SupaProxy — Supabase-compatible API proxy backed by SQL Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
supaproxy-mcp = "supaproxy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supaproxy_mcp"]
